<resources>
    <string name="app_name">SwordMagicHeart</string>
    <string name="open_name">Sword Magic Heart</string>
    <string name="open_prepare">Prepare for Battle!!!!</string>
    <string name="open_sword">Sword</string>
    <string name="open_magic">Magic</string>
    <string name="open_heart">Heart</string>
    <string name="open_go">Begin Battle!!!</string>
    <string name="player_score">00</string>
    <string name="computer_score">00</string>
    <string name="battle_go">Battle!</string>
</resources>
