<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/opening_screen_background"
    tools:context="example.androidstudio.swordmagicheart.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_name"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="#ffff"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_prepare"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/stylebutton"
        android:fontFamily="monospace"
        android:text="@string/open_go"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
