<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/battle_screen"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gotbattlescenes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".75"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/player_score"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="50dp"
            android:text="@string/player_score"/>

        <TextView
            android:id="@+id/timer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="30dp"
            android:text="30"/>

        <TextView
            android:id="@+id/computer_score"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="50dp"
            android:text="@string/computer_score"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/player_battle_choice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/computer_battle_choice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <Button
            android:id="@+id/battle_button"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/battle_go"/>
        <TextView
            android:id="@+id/winner_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="50dp"
            android:gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/rock"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:src="@drawable/rock"
            android:scaleType="centerInside"
            android:layout_weight="1"/>
        <ImageButton
            android:id="@+id/paper"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:src="@drawable/paper"
            android:scaleType="centerInside"
            android:layout_weight="1"/>
        <ImageButton
            android:id="@+id/scissor"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:src="@drawable/scissor"
            android:scaleType="centerInside"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>
